--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
     </head>
-    
+
     <body>
 
         <header>
+            <h1>Il mio Viaggio a Londra</h1>
+            <!--Immagine da sistemare-->
+            <img src="pexels-bill-emrich-230794-0" alt="London eye">
+            <hr>
 
         </header>
 
