upgrade main part

--- a/index.html
+++ b/index.html
@@ -11,15 +11,40 @@
 
     <body>
 
+        <!--Header-->
         <header>
             <h1>Il mio Viaggio a Londra</h1>
-            <!--Immagine da sistemare-->
+
+            <!--Immagine da SISTEMARE-->
             <img src="pexels-bill-emrich-230794-0" alt="London eye">
             <hr>
 
         </header>
 
+        <!--Main-->
         <main>
+            <!--Costs-->
+            <h2>
+                Le mie spese
+            </h2>
+            <hr>
+
+            <!--To do list-->
+            <h3>
+                Cose da fare
+            </h3>
+            <ul>
+                <li>
+                    
+                </li>
+            </ul>
+            <hr>
+
+            <!--Info-->
+            <h3>
+                Info utili:
+            </h3>
+            <hr>
 
         </main>
 
