--- a/index.html
+++ b/index.html
@@ -53,11 +53,26 @@
             <h3>
                 Info utili:
             </h3>
+            <ol>
+                <li>
+                    Numeri utili di emergenza
+                </li>
+                <li>
+                   Hotel
+                </li>
+                <li>
+                    Aereo
+                </li>
+
+            </ol>
             <hr>
 
         </main>
 
         <footer>
+            <h3>
+                Le foto
+            </h3>
 
         </footer>
        
