--- a/index.html
+++ b/index.html
@@ -58,14 +58,23 @@
                     Numeri utili di emergenza
                     <ul>
                         <li>
-                            999
+                            <strong>
+                                999
+                            </strong>
                         </li>
+
                         <li>
-                            101
+                            <strong>
+                                101
+                            </strong>
                         </li>
+
                         <li>
-                            111
+                            <strong>
+                                111
+                            </strong>
                         </li>
+
                     </ul>
                 </li>
                 <li>
