--- a/index.html
+++ b/index.html
@@ -59,20 +59,23 @@
                     <ul>
                         <li>
                             <strong>
-                                999
+                                999 
                             </strong>
+                            - Emergenza
                         </li>
 
                         <li>
                             <strong>
                                 101
                             </strong>
+                            - Numero polizia
                         </li>
 
                         <li>
                             <strong>
                                 111
                             </strong>
+                            - Numero assistenza medica
                         </li>
 
                     </ul>
