added comments to main

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                 Info utili:
             </h3>
             <ol>
+
+                <!--Emergency numbers-->
                 <li>
                     Numeri utili di emergenza
                     <ul>
@@ -80,9 +82,13 @@
 
                     </ul>
                 </li>
+
+                <!--Info Hotel-->
                 <li>
                    Hotel
                 </li>
+
+                <!--Info aereo-->
                 <li>
                     Aereo
                 </li>
