Modify Info Hotel

--- a/index.html
+++ b/index.html
@@ -86,6 +86,25 @@
                 <!--Info Hotel-->
                 <li>
                    Hotel
+                   <ul>
+                    <li>
+                        <strong>
+                        Nome hotel:
+                        </strong>
+                        Buckingham Palace
+                    </li>
+                   </ul>
+
+                   <ul>
+                    <li>
+                        <strong>
+                        Indirizzo hotel:
+                        </strong>
+                        Westminster, London SW1A1AA, Regno Unito
+                    </li>
+                   </ul>
+
+
                 </li>
 
                 <!--Info aereo-->
