Modify Info Aereo

--- a/index.html
+++ b/index.html
@@ -110,6 +110,23 @@
                 <!--Info aereo-->
                 <li>
                     Aereo
+                    <ul>
+                        <li>
+                            <strong>
+                                Volo di Andata:
+                            </strong>
+                            Y1234X, ore 9.30 da Milano Malpensa
+                        </li>
+                    </ul>
+
+                    <ul>
+                        <li>
+                            <strong>
+                                Volo di Ritorno:
+                            </strong>
+                            Y1236X, ore 18.30 da London Heathrow
+                        </li>
+                    </ul>
                 </li>
 
             </ol>
