--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </h3>
             <ul>
                 <li>
-                    Visitare la Tower of London
+                    Visitare la Tower of London 
                 </li>
                 <li>
                     Visitare greenwich
@@ -138,6 +138,8 @@
             <h3>
                 Le foto
             </h3>
+            <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Lights">
+            <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="London Bridge">
 
         </footer>
        
