--- a/index.html
+++ b/index.html
@@ -27,6 +27,23 @@
             <h2>
                 Le mie spese
             </h2>
+            <table>
+                <!--Heading Table-->
+                <thead>
+                    <tr>
+                        <th>
+                            Numero
+                        </th>
+                        <th>
+                            Descrizione
+                        </th>
+                        <th>
+                            Costo
+                        </th>
+
+                    </tr>
+                </thead>
+            </table>
             <hr>
 
             <!--To do list-->
