--- a/index.html
+++ b/index.html
@@ -40,9 +40,52 @@
                         <th>
                             Costo
                         </th>
-
                     </tr>
                 </thead>
+
+                <!--Body table-->
+                <tbody>
+
+                    <!--1' LINE-->
+                    <tr>
+                        <td>
+                            1
+                        </td>
+                        <td>
+                            Biglietto Aereo
+                        </td>
+                        <td>
+                            120£
+                        </td>
+                    </tr>
+
+                    <!--2' LINE-->
+                    <tr>
+                        <td>
+                            1
+                        </td>
+                        <td>
+                            Biglietto Aereo
+                        </td>
+                        <td>
+                            120£
+                        </td>
+                    </tr>
+
+                    <!--3' LINE-->
+                    <tr>
+                        <td>
+                            1
+                        </td>
+                        <td>
+                            Biglietto Aereo
+                        </td>
+                        <td>
+                            120£
+                        </td>
+                    </tr>
+                </tbody>
+
             </table>
             <hr>
 
