--- a/index.html
+++ b/index.html
@@ -86,6 +86,21 @@
                     </tr>
                 </tbody>
 
+                <!--Footer Table-->
+                <tfoot>
+                    <tr>
+                        <td>
+                            Totale
+                        </td>
+                        <td>
+                            
+                        </td>
+                        <td>
+                            360£
+                        </td>
+                    </tr>
+                </tfoot>
+
             </table>
             <hr>
 
