--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>Il mio Viaggio a Londra</h1>
 
             <!--Immagine da SISTEMARE-->
-            <img src="pexels-bill-emrich-230794-0" alt="London eye">
+            <img src="img/img1.jpg" alt="London eye">
             <hr>
 
         </header>
