--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
             <h1>Il mio Viaggio a Londra</h1>
 
             <!--Immagine da SISTEMARE-->
-            <img src="img/img1.jpg" alt="London eye">
+            <img src="img/img1.jpg" alt="London eye1">
+            <img src="img/img2.jpg" alt="London eye2">
+            <img src="img/img3.jpg" alt="big ben london">
+
+
             <hr>
 
         </header>
