--- a/index.html
+++ b/index.html
@@ -112,16 +112,16 @@
             </h3>
             <ul>
                 <li>
-                    Visitare la Tower of London 
+                    Visitare la Tower of London 	&#967;
                 </li>
                 <li>
-                    Visitare greenwich
+                    Visitare greenwich &#10003;
                 </li>
                 <li>
-                    Ascoltare un artista di strada a Covent Garden
+                    Ascoltare un artista di strada a Covent Garden &#10003;
                 </li>
                 <li>
-                    Mangiare il tipico Fish and Chips inglese
+                    Mangiare il tipico Fish and Chips inglese 	&#967;
                 </li>
             </ul>
             <hr>
