CLEANED HEADING TABLE

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     </head>
 
     <body>
-
         <!--Header-->
         <header>
             <h1>Il mio Viaggio a Londra</h1>
@@ -26,22 +25,12 @@
         <!--Main-->
         <main>
             <!--Costs-->
-            <h2>
-                Le mie spese
-            </h2>
+            <h2>Le mie spese</h2>
             <table>
                 <!--Heading Table-->
                 <thead>
                     <tr>
-                        <th>
-                            Numero
-                        </th>
-                        <th>
-                            Descrizione
-                        </th>
-                        <th>
-                            Costo
-                        </th>
+                        <th>Numero</th><th>Descrizione</th><th>Costo</th>
                     </tr>
                 </thead>
 
