Cleaned body table

--- a/index.html
+++ b/index.html
@@ -36,44 +36,17 @@
 
                 <!--Body table-->
                 <tbody>
-
                     <!--1' LINE-->
                     <tr>
-                        <td>
-                            1
-                        </td>
-                        <td>
-                            Biglietto Aereo
-                        </td>
-                        <td>
-                            120€
-                        </td>
+                        <td>1</td><td>Biglietto Aereo</td><td>120€</td>
                     </tr>
-
                     <!--2' LINE-->
                     <tr>
-                        <td>
-                            1
-                        </td>
-                        <td>
-                            Biglietto Aereo
-                        </td>
-                        <td>
-                            120€
-                        </td>
+                        <td>1</td><td>Biglietto Aereo</td><td>120€</td>
                     </tr>
-
                     <!--3' LINE-->
                     <tr>
-                        <td>
-                            1
-                        </td>
-                        <td>
-                            Biglietto Aereo
-                        </td>
-                        <td>
-                            120€
-                        </td>
+                        <td>1</td><td>Biglietto Aereo</td><td>120€</td>
                     </tr>
                 </tbody>
 
